vlib/v/checker/tests/import_mod_as_mod_err.vv
import math as math

fn main() {
    println(math.e)
}
